# snaplet-neo4j

./: .gitignore  .snaplet-neo4j.cabal.swp  LICENSE  README.md  snaplet-neo4j.cabal
Snap/Snaplet/: Neo4j.hs
Snap/Snaplet/Auth/Backends/: Neo4j.hs
Snap/Snaplet/Auth/Backends/Neo4j/: Internal.hs  Types.hs
src/Snap/Snaplet/: Neo4j.hs
src/Snap/Snaplet/Auth/Backends/: Neo4j.hs
src/Snap/Snaplet/Auth/Backends/Neo4j/: Internal.hs  Types.hs
src/Snap/Snaplet/Neo4j/: Internal.hs
