name:                snaplet-neo4j
version:             0.0.0.12
synopsis:            A snaplet for connecting to Neo4j
-- description:         
homepage:            http://github.com/zearen-wover/snaplet-neo4j
license:             BSD3
license-file:        LICENSE
author:              Zie Weaver
maintainer:          zearen.wover@gmail.com
-- copyright:           
category: Snap
build-type: Simple
extra-source-files:
  README.md
cabal-version: >= 1.10

library
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules:
    Snap.Snaplet.Neo4j
    Snap.Snaplet.Auth.Backends.Neo4j
    Snap.Snaplet.Auth.Backends.Neo4j.Types
  other-modules:
    Snap.Snaplet.Neo4j.Internal
    Snap.Snaplet.Auth.Backends.Neo4j.Internal
  build-depends:
    aeson >= 0.7.0 && < 0.10,
    base >= 4.5 && < 5.0,
    bytestring >= 0.9.1 && < 0.11.0,
    clientsession >= 0.8 && < 0.10,
    containers >= 0.3 && < 0.6,
    haskell-neo4j-client >= 0.3 && < 0.4,
    monad-logger >= 0.3 && < 0.4,
    old-locale >= 1.0 && < 2.0,
    snap >= 0.9 && < 0.15,
    text >= 0.11 && < 1.3,
    time >= 1.1 && < 1.5,
    transformers >= 0.3 && < 0.5,
    unordered-containers == 0.2.*
  ghc-options: -Wall
